VSE: Mouse cursor over invisible (i.e. marker-less) marker region inhibits delete hotkey meant for selected strip deletion #90964

Closed
opened 2021-08-26 14:58:27 +02:00 by David Salvo · 7 comments

System Information
Operating system: Linux-5.4.0-81-generic-x86_64-with-glibc2.31 64 Bits
Graphics card: GeForce 9800 GT/PCIe/SSE2 NVIDIA Corporation 3.3.0 NVIDIA 340.108

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-08-18 20:22, hash: a217e043be
Worked: Unsure

Short description of error
When mouse cursor is hovering over the invisible (i.e. with no markers) marker region, the delete hotkey presses meant for a selected strip on the timeline will be inhibited.

While this is somewhat related to the various issues associated with an active sequencer marker area:
https://developer.blender.org/T57976
https://developer.blender.org/T90814
... it is different in that the user has no visual signs to suggest this would happen.

Easiest fix would just be make the visual shading of the marker area always on...
Long-term, I guess this problem might be naturally solved when the other issues with the marker area are sorted out.

Note: this occurs even when the delete strip and delete marker hotkey aren't identical (i.e. "x").

Exact steps for others to reproduce the error
{F10327982,size=full}

**System Information** Operating system: Linux-5.4.0-81-generic-x86_64-with-glibc2.31 64 Bits Graphics card: GeForce 9800 GT/PCIe/SSE2 NVIDIA Corporation 3.3.0 NVIDIA 340.108 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-08-18 20:22, hash: `a217e043be` Worked: Unsure **Short description of error** When mouse cursor is hovering over the invisible (i.e. with no markers) marker region, the delete hotkey presses meant for a selected strip on the timeline will be inhibited. While this is somewhat related to the various issues associated with an *active* sequencer marker area: https://developer.blender.org/T57976 https://developer.blender.org/T90814 ... it is different in that the user has no visual signs to suggest this would happen. Easiest fix would just be make the visual shading of the marker area always on... Long-term, I guess this problem might be naturally solved when the other issues with the marker area are sorted out. Note: this occurs even when the delete strip and delete marker hotkey aren't identical (i.e. "x"). **Exact steps for others to reproduce the error** {[F10327982](https://archive.blender.org/developer/F10327982/marker-region-inhibits-keyboard-based-strip-operators-even-when-unused.gif),size=full}
Author

Added subscriber: @slinkeepie

Added subscriber: @slinkeepie

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @quantimoney

Added subscriber: @quantimoney
Member

There is also added issue of right click menu delete not working on markers when called from the marker region (using 'x' works then, when markers are present to delete markers).

There is also added issue of right click menu delete not working on markers when called from the marker region (using 'x' works then, when markers are present to delete markers).

This issue was referenced by 17769489d9

This issue was referenced by 17769489d920f86310464297e8906f34d5ec61b9

This issue was referenced by a9696f04a0

This issue was referenced by a9696f04a012ce23ef419afe489378d1ce840638

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Richard Antalik self-assigned this 2022-06-30 20:47:20 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#90964
No description provided.