Fix T90964: Strip can't be deleted if cursor is at bottom of timeline

Caused by hard-coded width of markers region causing operator to pass
through.

Execute operator if there are no markers.